--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@ a:visited {
 nav {
 	display: flex;
 	flex-direction: row;
+	align-items: baseline;
 	gap: 1em;
 }
 p {
@@ -15,4 +16,19 @@ p {
 	align-items: center;
 	border: 1px solid black;
 	padding: 1em;
+}
+form {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 1em;
+}
+form > label {
+	display: flex;
+	flex-direction: row;
+	align-items: baseline;
+	gap: 1em;
+}
+input {
+	padding: 0.5em;
 }
